Always share verbose chip text color calculation on Views with the icon.

Bug: 740722
Change-Id: I50446a23a54d84a9dcaa1bb8167cb7348dba1aad